--- a/packages/my-mcp/package.json
+++ b/packages/my-mcp/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.17.0",
+    "ajv": "^8.17.1",
     "express": "^5.1.0",
     "zod": "^4.0.10"
   }
